--- a/src/scss/components/contacts.scss
+++ b/src/scss/components/contacts.scss
@@ -7,3 +7,51 @@
         margin-top: 100px;
     }
 }
+
+@include media ($desktop) {
+    .contacts {
+        &__container {}
+        &__info {}
+        &__content {}
+    }
+}
+
+@include media ($laptop) {
+    .contacts {
+        &__container {}
+        &__info {}
+        &__content {}
+    }
+}
+
+@include media ($tablet) {
+    .contacts {
+        margin-top: 150px;
+        &__container {}
+        &__info {}
+        &__content {
+            margin-top: 30px;
+        }
+        .feedback {
+            &__left {
+                min-height: auto;
+            }
+        }
+    }
+}
+
+@include media ($mobile) {
+    .contacts {
+        margin-top: 100px;
+        &__container {}
+        &__info {}
+        &__content {}
+        .feedback {
+            &__left {
+                flex: 1 1 auto;
+                gap: 20px;
+                padding: 30px;
+            }
+        }
+    }
+}
