--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -77,7 +77,9 @@
         &__logo {}
         &__menu {}
         &__text {}
-        &__link {}
+        &__link {
+            display: block;
+        }
     }
     .menu {
         &__list {
