--- a/src/scss/components/gallery-studios.scss
+++ b/src/scss/components/gallery-studios.scss
@@ -4,3 +4,37 @@
         margin-top: 100px;
     }
 }
+
+@include media($desktop) {
+    .gallery-studios {
+        &__title {}
+        &__grid {}
+    }
+}
+
+@include media($laptop) {
+    .gallery-studios {
+        &__title {}
+        &__grid {
+            margin-top: 30px;
+        }
+    }
+}
+
+@include media($tablet) {
+    .gallery-studios {
+        margin-top: 150px;
+        &__title {}
+        &__grid {
+            margin-top: 10px;
+        }
+    }
+}
+
+@include media($mobile) {
+    .gallery-studios {
+        margin-top: 100px;
+        &__title {}
+        &__grid {}
+    }
+}
