--- a/src/scss/components/hero.scss
+++ b/src/scss/components/hero.scss
@@ -7,8 +7,8 @@
         flex-direction: column;
         position: relative;
 
-        background: url(../images/main-banner.png) no-repeat 50% 50%;
-        background-size: cover;
+        background: url(../images/main-banner.png) no-repeat 50% 50% !important;
+        background-size: cover !important;
         border-radius: 25px;  
 
         padding: 65px 75px;
@@ -21,9 +21,9 @@
         font-weight: 500;
     }
     &__title {
-        font-size: 96px;
+        font-size: 84px;
         font-weight: 700;
-        line-height: 100px;
+        line-height: 90px;
 
         margin-top: 30px;
     }
@@ -102,10 +102,10 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            background-position: 70% 50%;
+            background-position: 70% 50% !important;
         }
         &__subtitle {
-            font-size: 12px;
+            font-size: 16px;
         }
         &__title {
             font-size: 36px;
