--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -171,6 +171,18 @@ a {
     max-width: 1100px;
 }
 
+@include media($tablet) {
+    .section-text {
+        font-size: 20px;
+    }
+}
+
+@include media($mobile) {
+    .section-text {
+        font-size: 20px;
+    }
+}
+
 .dot {
     color: $pink;
 }
@@ -286,6 +298,42 @@ a {
     }
 }
 
+@include media($laptop) {
+    .accordion-button {
+        flex: 0 0 50px;
+        height: 50px;
+        &::before {
+            width: 25px;
+        }
+        &::after {
+            width: 25px;
+        }
+        &_active {
+        }
+        &_gradient {
+        }
+    }
+}
+
+@include media($tablet) {
+    .accordion-button {
+        flex: 0 0 30px;
+        height: 30px;
+        &::before {
+            width: 15px;
+            height: 2px;
+        }
+        &::after {
+            width: 15px;
+            height: 2px;
+        }
+        &_active {
+        }
+        &_gradient {
+        }
+    }
+}
+
 .popup {
     width: 100%;
     max-width: 700px;
@@ -396,5 +444,17 @@ a {
                 width: 15px;
             }
         }
+    }
+}
+
+@include media($tablet) {
+    .privacy {
+        margin-top: 150px;
+    }
+}
+
+@include media($mobile) {
+    .privacy {
+        margin-top: 100px;
     }
 }
