--- a/src/scss/config/common.scss
+++ b/src/scss/config/common.scss
@@ -386,6 +386,8 @@ a {
 
         cursor: pointer;
 
+        z-index: 11;
+
         &::before {
             content: '';
             position: absolute;
