--- a/src/scss/components/calculator.scss
+++ b/src/scss/components/calculator.scss
@@ -58,8 +58,7 @@
         flex-direction: column;
         justify-content: space-between;
 
-        background: url('../images/calculator-bg.png') no-repeat 50% 50%;
-        background-size: cover;
+        background: url('../images/calculator-bg.png') no-repeat center/cover;
         border-radius: 25px;
 
         color: $white;
