--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -93,3 +93,53 @@
         }
     }
 }
+
+.fixed-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 6;
+    &__elem {
+        transition: .3s;
+        transform: translate(200%, 0);
+        padding: 10px;
+        background: $mainGradient;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 50px;
+        height: 50px;
+        flex: 0 0 50px;
+        svg {
+            width: 100%;
+            height: 100%;
+        }
+        &::before {
+            content: none;
+        }
+    }
+    &_active {
+        .fixed-buttons {
+            &__elem {
+                transform: translate(0, 0);
+            }
+        }
+    }
+}
+
+@include media($tablet) {
+    .fixed-buttons {
+        gap: 10px;
+        &__elem {
+            width: 40px;
+            height: 40px;
+            flex: 0 0 40px;
+            padding: 8px;
+        }
+    }
+}
