--- a/src/scss/components/franchisees-advantages.scss
+++ b/src/scss/components/franchisees-advantages.scss
@@ -1,5 +1,6 @@
 .franchisees-advantages {
     .advantage-card {
+        flex-grow: 1;
         &:nth-child(2) {
             .advantage-card__icon {
                 path {
