--- a/src/scss/components/studios.scss
+++ b/src/scss/components/studios.scss
@@ -24,6 +24,9 @@
         right: 65px;
         margin: -20px 0;
         display: none;
+        &_desktop {
+            display: block;
+        }
     }
 }
 .studio-card {
