--- a/src/scss/components/video.scss
+++ b/src/scss/components/video.scss
@@ -2,16 +2,18 @@
     margin-top: 100px;
     &__wrapper {
         display: flex;
+        align-items: flex-end;
         gap: 270px;
-        padding: 140px 60px;
-        min-height: 700px;
+        padding: 300px 60px 100px 60px;
+        min-height: 500px;
 
         position: relative;
 
         color: white;
         border-radius: 25px;
-        background: url('../images/video.jpg') no-repeat 50% 50%;
-        background-size: cover;
+        background: url(../images/video.jpg) no-repeat center/cover !important;
+
+        box-shadow: inset 0 1000px 200px rgba(0, 0, 0, 0.5);
     }
     &__title {
         flex: 1 1 760px;
@@ -50,6 +52,16 @@
         &:hover {
             transform: translate(-50%, -50%) scale(1.05) rotate(360deg);
         }
+    }
+}
+
+.video-wrapper {
+    width: 100%;
+    border-radius: 15px;
+    overflow: hidden;
+    video {
+        width: 100%;
+        height: 100%;
     }
 }
 
@@ -92,9 +104,10 @@
 		&__wrapper {
             flex-direction: column;
             justify-content: flex-end;
+            align-items: flex-start;
             gap: 10px;
             
-            padding: 30px 40px;
+            padding: 20px 40px;
         }
 		&__title {
             flex: 0 0 auto;
