--- a/src/scss/config/vars.scss
+++ b/src/scss/config/vars.scss
@@ -7,6 +7,7 @@ $black: #000000;
 $lightBlack: #131313;
 $blue: #0091D7;
 $pink: #FE0FD4;
+$purple: #B900D7;
 $white: #FFFFFF;
 
 $mainGradient: linear-gradient(90deg, $blue 0%, $pink 100%);
