--- a/src/scss/components/calculator.scss
+++ b/src/scss/components/calculator.scss
@@ -56,7 +56,7 @@
 
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        gap: 50px;
 
         background: url('../images/calculator-bg.png') no-repeat center/cover;
         border-radius: 25px;
@@ -91,6 +91,7 @@
         display: flex;
         flex-direction: column;
         gap: 25px;
+        margin: -20px 0 0 0;
     }
     &__list-elem {
         display: flex;
